Updated index.html with Fall 2024 schedule

--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
 							<a href="https://www.instagram.com/badminton_club_uw/?hl=en">here</a> and ask about joining.
 						</p>
 						<h3 style="text-align: center">Schedule</h3>
-						<div class="w3-image align-center"><img src="images/schedule2023_1.JPG" alt="schedule 1" style="max-width:700px; width: 90%"/></div>
-						<div class="w3-image align-center"><img src="images/schedule2023_2.JPG" alt="schedule 2" style="max-width:700px; width: 90%"/></div>
+						<div class="w3-image align-center"><img src="images/schedule_FA24_1.JPG" alt="schedule 1" style="max-width:700px; width: 90%"/></div>
+						<div class="w3-image align-center"><img src="images/schedule_FA24_2.JPG" alt="schedule 2" style="max-width:700px; width: 90%"/></div>
+						<div class="w3-image align-center"><img src="images/schedule_FA24_3.JPG" alt="schedule 3" style="max-width:700px; width: 90%"/></div>
 					</div>
 				</div>
 			</section>
