--- a/index.html
+++ b/index.html
@@ -166,44 +166,118 @@
 
 						<div class="w3-content" style="max-width:1564px">
 							<div class="w3-row-padding">
-								<div class="w3-col w3-half w3-auto w3-margin-bottom">
+<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
 											<div style="text-align: center" class="w3-centered">
-												<h3 >Social Media & Communications Chair</h3>
+												<h3 >Website Developer</h3>
 												<div class="w3-image align-center"><img src="images/mehul.JPG" alt="mehul maheshwari" style="max-width:700px; width: 90%"/></div>
 												<p><b>Mehul Maheshwari</b></p>
 											</div>
 
 										</div>
 									</div>
+								</div> -->
+<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
+									<div class="w3-display-container">
+										<div class="w3-border-top w3-border-grey w3-padding">
+											<div style="text-align: center" class="w3-centered">
+												<h3>Treasurer</h3>
+												<div class="w3-image align-center"><img src="images/sai.jpg" alt="sai" style="max-width:700px; width: 90%"/></div>
+												<p><b>Sai Chaparala</b></p>
+											</div>
+
+										</div>
+									</div>
+								</div> -->
+								<div class="w3-col w3-half w3-auto w3-margin-bottom">
+									<div class="w3-display-container">
+										<div class="w3-border-top w3-border-grey w3-padding">
+											<div style="text-align: center" class="w3-centered">
+												<h3>President</h3>
+												<div class="w3-image align-center"><img src="images/grace.jpg" alt="grace" style="max-width:700px; width: 90%"/></div>
+												<p><b>Grace Kearney</b></p>
+											</div>
+
+										</div>
+									</div>
 								</div>
 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
 											<div style="text-align: center" class="w3-centered">
+												<h3>Vice President</h3>
+<!-- 												<div class="w3-image align-center"><img src="images/ethan.JPG" alt="pal" style="max-width:700px; width: 90%"/></div> -->
+												<p><b>Pal Karani</b></p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="w3-row-padding">
+<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
+									<div class="w3-display-container">
+										<div class="w3-border-top w3-border-grey w3-padding">
+											<div style="text-align: center" class="w3-centered">
+												<h3>Vice President</h3>
+<!-- 												<div class="w3-image align-center"><img src="images/ethan.JPG" alt="pal" style="max-width:700px; width: 90%"/></div> -->
+<!-- 												<p><b>Pal Karani</b></p>
+											</div>
+
+										</div>
+									</div>
+								</div> -->
+<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
+									<div class="w3-display-container">
+										<div class="w3-border-top w3-border-grey w3-padding">
+											<div style="text-align: center" class="w3-centered">
+												<h3>Fundraising & Grants Chair</h3>
+<!--												<div class="w3-image align-center"><img src="images/" alt="miranda" style="max-width:700px; width: 90%"/></div>-->
+<!-- 												<p>(no picture unfortunately)</p>
+												<p><b>Miranda Salazar</b></p>
+											</div>
+
+										</div>
+									</div>
+								</div> -->
+								<div class="w3-col w3-half w3-auto w3-margin-bottom">
+									<div class="w3-display-container">
+										<div class="w3-border-top w3-border-grey w3-padding">
+											<div style="text-align: center" class="w3-centered">
 												<h3>Treasurer</h3>
-												<div class="w3-image align-center"><img src="images/sai.JPG" alt="sai" style="max-width:700px; width: 90%"/></div>
+												<div class="w3-image align-center"><img src="images/sai.jpg" alt="sai" style="max-width:700px; width: 90%"/></div>
 												<p><b>Sai Chaparala</b></p>
 											</div>
 
 										</div>
 									</div>
 								</div>
-							</div>
-							<div class="w3-row-padding">
 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
 											<div style="text-align: center" class="w3-centered">
-												<h3>Vice President</h3>
-												<div class="w3-image align-center"><img src="images/ethan.JPG" alt="sai" style="max-width:700px; width: 90%"/></div>
-												<p><b>Ethan Rosler</b></p>
+												<h3>Social Media & Communications</h3>
+<!-- 												<div class="w3-image align-center"><img src="images/johnson.jpg" alt="johnson" style="max-width:700px; width: 90%"/></div> -->
+												<p><b>Johnson Ni</b></p>
+											</div>
+										</div>
+									</div>
+								</div>
+								
+							</div>
+							<div class="w3-row-padding">
+<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
+									<div class="w3-display-container">
+										<div class="w3-border-top w3-border-grey w3-padding">
+											<div style="text-align: center" class="w3-centered">
+												<h3>President</h3>
+												<div class="w3-image align-center"><img src="images/grace.jpg" alt="grace" style="max-width:700px; width: 90%"/></div>
+												<p><b>Grace Kearney</b></p>
 											</div>
 
 										</div>
 									</div>
-								</div>
+								</div> -->
 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
@@ -217,15 +291,26 @@
 										</div>
 									</div>
 								</div>
+								<div class="w3-col w3-half w3-auto w3-margin-bottom">
+									<div class="w3-display-container">
+										<div class="w3-border-top w3-border-grey w3-padding">
+											<div style="text-align: center" class="w3-centered">
+												<h3>Fundraising & Grants Chair</h3>
+												<div class="w3-image align-center"><img src="images/David.jpg" alt="david" style="max-width:700px; width: 90%"/></div>
+												<p><b>David Zhou</b></p>
+											</div>
+										</div>
+									</div>
+								</div>
 							</div>
 							<div class="w3-row-padding">
 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
 											<div style="text-align: center" class="w3-centered">
-												<h3>President</h3>
-												<div class="w3-image align-center"><img src="images/grace.JPG" alt="sai" style="max-width:700px; width: 90%"/></div>
-												<p><b>Grace Kearney</b></p>
+												<h3 >Website Developer</h3>
+												<div class="w3-image align-center"><img src="images/mehul.JPG" alt="mehul maheshwari" style="max-width:700px; width: 90%"/></div>
+												<p><b>Mehul Maheshwari</b></p>
 											</div>
 
 										</div>
