Combined Fundraising & Events

--- a/index.html
+++ b/index.html
@@ -215,31 +215,6 @@
 								</div>
 							</div>
 							<div class="w3-row-padding">
-<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
-									<div class="w3-display-container">
-										<div class="w3-border-top w3-border-grey w3-padding">
-											<div style="text-align: center" class="w3-centered">
-												<h3>Vice President</h3>
-<!-- 												<div class="w3-image align-center"><img src="images/ethan.JPG" alt="pal" style="max-width:700px; width: 90%"/></div> -->
-<!-- 												<p><b>Pal Karani</b></p>
-											</div>
-
-										</div>
-									</div>
-								</div> -->
-<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
-									<div class="w3-display-container">
-										<div class="w3-border-top w3-border-grey w3-padding">
-											<div style="text-align: center" class="w3-centered">
-												<h3>Fundraising & Grants Chair</h3>
-<!--												<div class="w3-image align-center"><img src="images/" alt="miranda" style="max-width:700px; width: 90%"/></div>-->
-<!-- 												<p>(no picture unfortunately)</p>
-												<p><b>Miranda Salazar</b></p>
-											</div>
-
-										</div>
-									</div>
-								</div> -->
 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
@@ -266,23 +241,12 @@
 								
 							</div>
 							<div class="w3-row-padding">
-<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
-									<div class="w3-display-container">
-										<div class="w3-border-top w3-border-grey w3-padding">
-											<div style="text-align: center" class="w3-centered">
-												<h3>President</h3>
-												<div class="w3-image align-center"><img src="images/grace.jpg" alt="grace" style="max-width:700px; width: 90%"/></div>
-												<p><b>Grace Kearney</b></p>
-											</div>
-
-										</div>
-									</div>
-								</div> -->
+								<h3>Fundraising & Events</h3>
 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
 											<div style="text-align: center" class="w3-centered">
-												<h3>Fundraising & Grants Chair</h3>
+<!-- 												<h3>Fundraising & Events</h3> -->
 <!--												<div class="w3-image align-center"><img src="images/" alt="miranda" style="max-width:700px; width: 90%"/></div>-->
 												<p>(no picture unfortunately)</p>
 												<p><b>Miranda Salazar</b></p>
@@ -295,7 +259,7 @@
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
 											<div style="text-align: center" class="w3-centered">
-												<h3>Fundraising & Grants Chair</h3>
+<!-- 												<h3>Fundraising & Events</h3> -->
 												<div class="w3-image align-center"><img src="images/David.jpg" alt="david" style="max-width:700px; width: 90%"/></div>
 												<p><b>David Zhou</b></p>
 											</div>
@@ -304,18 +268,19 @@
 								</div>
 							</div>
 							<div class="w3-row-padding">
-								<div class="w3-col w3-half w3-auto w3-margin-bottom">
+<!-- 								<h3>Website Developer</h3> -->
+<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom"> -->
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
 											<div style="text-align: center" class="w3-centered">
-												<h3 >Website Developer</h3>
+												<h3>Website Developer</h3>
 												<div class="w3-image align-center"><img src="images/mehul.JPG" alt="mehul maheshwari" style="max-width:700px; width: 90%"/></div>
 												<p><b>Mehul Maheshwari</b></p>
 											</div>
 
 										</div>
 									</div>
-								</div>
+<!-- 								</div> -->
 
 <!--								<div class="w3-col w3-half w3-auto w3-margin-bottom">-->
 <!--									<div class="w3-display-container">-->
