Edits to Fundraising & Events

--- a/index.html
+++ b/index.html
@@ -240,14 +240,11 @@
 								</div>
 								
 							</div>
-							<div class="w3-row-padding">
-								<h3>Fundraising & Events</h3>
+<!-- 							<div class="w3-row-padding">
 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
 											<div style="text-align: center" class="w3-centered">
-<!-- 												<h3>Fundraising & Events</h3> -->
-<!--												<div class="w3-image align-center"><img src="images/" alt="miranda" style="max-width:700px; width: 90%"/></div>-->
 												<p>(no picture unfortunately)</p>
 												<p><b>Miranda Salazar</b></p>
 											</div>
@@ -259,16 +256,33 @@
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
 											<div style="text-align: center" class="w3-centered">
-<!-- 												<h3>Fundraising & Events</h3> -->
 												<div class="w3-image align-center"><img src="images/David.jpg" alt="david" style="max-width:700px; width: 90%"/></div>
 												<p><b>David Zhou</b></p>
 											</div>
 										</div>
 									</div>
 								</div>
+							</div> -->
+							<div class="w3-row-padding">
+<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom"> -->
+									<div class="w3-display-container">
+										<div class="w3-border-top w3-border-grey w3-padding">
+											<div style="text-align: center" class="w3-centered">
+												<h3>Fundraising & Events</h3>
+												<div class="w3-col w3-half w3-auto w3-margin-bottom">
+													<p>(no picture unfortunately)</p>
+													<p><b>Miranda Salazar</b></p>
+												</div>
+												<div class="w3-col w3-half w3-auto w3-margin-bottom">
+													<div class="w3-image align-center"><img src="images/David.jpg" alt="david" style="max-width:700px; width: 90%"/></div>
+													<p><b>David Zhou</b></p>
+												</div>
+											</div>
+
+										</div>
+									</div>
 							</div>
 							<div class="w3-row-padding">
-<!-- 								<h3>Website Developer</h3> -->
 <!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom"> -->
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
@@ -280,16 +294,6 @@
 
 										</div>
 									</div>
-<!-- 								</div> -->
-
-<!--								<div class="w3-col w3-half w3-auto w3-margin-bottom">-->
-<!--									<div class="w3-display-container">-->
-<!--										<div class="w3-border-top w3-border-grey w3-padding">-->
-<!--										-->
-<!--										</div>-->
-<!--									</div>-->
-<!--								</div>-->
-
 							</div>
 						</div>
 
