Added Miranda's pic to the website

--- a/index.html
+++ b/index.html
@@ -166,30 +166,6 @@
 
 						<div class="w3-content" style="max-width:1564px">
 							<div class="w3-row-padding">
-<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
-									<div class="w3-display-container">
-										<div class="w3-border-top w3-border-grey w3-padding">
-											<div style="text-align: center" class="w3-centered">
-												<h3 >Website Developer</h3>
-												<div class="w3-image align-center"><img src="images/mehul.JPG" alt="mehul maheshwari" style="max-width:700px; width: 90%"/></div>
-												<p><b>Mehul Maheshwari</b></p>
-											</div>
-
-										</div>
-									</div>
-								</div> -->
-<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
-									<div class="w3-display-container">
-										<div class="w3-border-top w3-border-grey w3-padding">
-											<div style="text-align: center" class="w3-centered">
-												<h3>Treasurer</h3>
-												<div class="w3-image align-center"><img src="images/sai.jpg" alt="sai" style="max-width:700px; width: 90%"/></div>
-												<p><b>Sai Chaparala</b></p>
-											</div>
-
-										</div>
-									</div>
-								</div> -->
 								<div class="w3-col w3-half w3-auto w3-margin-bottom">
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
@@ -240,64 +216,35 @@
 								</div>
 								
 							</div>
-<!-- 							<div class="w3-row-padding">
-								<div class="w3-col w3-half w3-auto w3-margin-bottom">
-									<div class="w3-display-container">
-										<div class="w3-border-top w3-border-grey w3-padding">
-											<div style="text-align: center" class="w3-centered">
-												<p>(no picture unfortunately)</p>
+							<div class="w3-row-padding">
+								<div class="w3-display-container">
+									<div class="w3-border-top w3-border-grey w3-padding">
+										<div style="text-align: center" class="w3-centered">
+											<h3>Fundraising & Events</h3>
+											<div class="w3-col w3-half w3-auto w3-margin-bottom">
+												<div class="w3-image align-center"><img src="images/miranda.jpg" alt="miranda" style="max-width:700px; width: 90%"/></div>
 												<p><b>Miranda Salazar</b></p>
 											</div>
-
-										</div>
-									</div>
-								</div>
-								<div class="w3-col w3-half w3-auto w3-margin-bottom">
-									<div class="w3-display-container">
-										<div class="w3-border-top w3-border-grey w3-padding">
-											<div style="text-align: center" class="w3-centered">
+											<div class="w3-col w3-half w3-auto w3-margin-bottom">
 												<div class="w3-image align-center"><img src="images/David.jpg" alt="david" style="max-width:700px; width: 90%"/></div>
 												<p><b>David Zhou</b></p>
 											</div>
 										</div>
 									</div>
 								</div>
-							</div> -->
-							<div class="w3-row-padding">
-<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom"> -->
-									<div class="w3-display-container">
-										<div class="w3-border-top w3-border-grey w3-padding">
-											<div style="text-align: center" class="w3-centered">
-												<h3>Fundraising & Events</h3>
-												<div class="w3-col w3-half w3-auto w3-margin-bottom">
-													<p>(no picture unfortunately)</p>
-													<p><b>Miranda Salazar</b></p>
-												</div>
-												<div class="w3-col w3-half w3-auto w3-margin-bottom">
-													<div class="w3-image align-center"><img src="images/David.jpg" alt="david" style="max-width:700px; width: 90%"/></div>
-													<p><b>David Zhou</b></p>
-												</div>
-											</div>
-
-										</div>
-									</div>
 							</div>
 							<div class="w3-row-padding">
-<!-- 								<div class="w3-col w3-half w3-auto w3-margin-bottom"> -->
-									<div class="w3-display-container">
-										<div class="w3-border-top w3-border-grey w3-padding">
-											<div style="text-align: center" class="w3-centered">
-												<h3>Website Developer</h3>
-												<div class="w3-image align-center"><img src="images/mehul.JPG" alt="mehul maheshwari" style="max-width:700px; width: 90%"/></div>
-												<p><b>Mehul Maheshwari</b></p>
-											</div>
-
+								<div class="w3-display-container">
+									<div class="w3-border-top w3-border-grey w3-padding">
+										<div style="text-align: center" class="w3-centered">
+											<h3>Website Developer</h3>
+											<div class="w3-image align-center"><img src="images/mehul.JPG" alt="mehul maheshwari" style="max-width:700px; width: 90%"/></div>
+											<p><b>Mehul Maheshwari</b></p>
 										</div>
 									</div>
+								</div>
 							</div>
 						</div>
-
-
 
 					</div>
 				</div>
