Updated Sai and David's pics

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 										<div class="w3-border-top w3-border-grey w3-padding">
 											<div style="text-align: center" class="w3-centered">
 												<h3>Treasurer</h3>
-												<div class="w3-image align-center"><img src="images/sai.jpg" alt="sai" style="max-width:700px; width: 90%"/></div>
+												<div class="w3-image align-center"><img src="images/sai.JPG" alt="sai" style="max-width:700px; width: 90%"/></div>
 												<p><b>Sai Chaparala</b></p>
 											</div>
 
@@ -226,7 +226,7 @@
 												<p><b>Miranda Salazar</b></p>
 											</div>
 											<div class="w3-col w3-half w3-auto w3-margin-bottom">
-												<div class="w3-image align-center"><img src="images/David.jpg" alt="david" style="max-width:700px; width: 90%"/></div>
+												<div class="w3-image align-center"><img src="images/david.jpg" alt="david" style="max-width:700px; width: 90%"/></div>
 												<p><b>David Zhou</b></p>
 											</div>
 										</div>
