Added link to Madison Open 2023
Updated the text for the schedule to incorporate the location shift from the Bakke to the Nick on Tuesdays and Thursdays

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 							<h2>How can I get involved?</h2>
 						</header>
 						<p>
-							This semester, our club meets on Tuesdays and Thursdays from 10-12pm @ the Nick on the 3rd floor.
+							This semester, our club meets on Tuesdays and Thursdays from 10pm-12am @ the Nick on the 3rd floor, and on Sundays from 12pm-2pm @ the Bakke on the 1st floor.
+							Please ignore the locations for practices on Tuesdays and Thurdays in the below schedule.
 							To get involved, show up and ask for a club executive. Alternatively, contact the club's instagram account
 							<a href="https://www.instagram.com/badminton_club_uw/?hl=en">here</a> and ask about joining.
 						</p>
@@ -107,9 +108,9 @@
 									<div class="w3-display-container">
 										<div class="w3-border-top w3-border-grey w3-padding">
 											<br>
-											<a href="https://www.tournamentsoftware.com/tournament/4970D439-6011-427C-8B8A-85DE6D809C28" style="text-decoration: none; text-decoration-color: transparent">
+											<a href="https://www.tournamentsoftware.com/tournament/442DDE07-A370-4799-9382-171AA15A9F39" style="text-decoration: none; text-decoration-color: transparent">
 												<div>
-													<h3 style="border-top-color: rgba(158,158,158,0.32) ">Steve Rader Memorial Open 2023</h3>
+													<h3 style="border-top-color: rgba(158,158,158,0.32) ">Madison Open 2023</h3>
 													<br>
 													<span class="icon solid major brands alt fa-battle-net"></span>
 												</div>
